--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/grimSkepsis/d3-quad-tree#readme",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.0-rc.0",
+    "@types/d3": "^7.1.0",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
@@ -38,6 +39,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "d3": "^7.1.1",
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
